Exercise2_04/manifests_old/service_backend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: backend # This is the app as declared in the Deployment
  ports:
    - port: 2346 # This is a port that is available to the cluster
      protocol: TCP
      targetPort: 8080 # This is the target port
