Exercise2_04/manifests_old/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: project
  name: taskservice-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 2345
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 2346
